--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "name": "Beep Lin"
   },
   "files": ["lib"],
-  "main": "lib/vue-orgchart.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/beeplin/vue-orgchart.git"
@@ -25,7 +25,7 @@
     "lint": "eslint ./src --ext .js,.vue --fix --format node_modules/eslint-friendly-formatter",
     "preversion": "npm run lint",
     "prepublishOnly": "npm run lib",
-    "lib": "rimraf lib && webpack -p --progress"
+    "lib": "rimraf lib && webpack -p --progress && cp src/orgchart.css lib"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
